2021-10-05 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Relase version 3.0.0

2021-09-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with PHP 8

2021-04-06 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Ensure compatibility with TYPO3 11, drop support for TYPO3 8 and 9

2021-03-19 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix passing of headers for TYPO3 9 and 10 (thanks to Florian Rival)
	* Release version 2.4.2

2021-02-22 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Update composer manifest
	* Release version 2.4.1

2020-05-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 2.4.0

2020-04-12 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Implement new configuration check API, resolves #5
	* Update documentation settings, resolves #6
	* Add new "headers" configuration parameter, resolves #4

2020-04-10 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with TYPO3 10

2018-12-28 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Drop compatibility with TYPO3 7, prepare for TYPO3, code cleanup, resolves #3
	* Add functional tests
	* Release version 2.3.0

2018-07-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated documentation regarding allowed absolute file paths
	* Released version 2.2.2

2018-02-17 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated headers initialization
	* Released version 2.2.1

2018-01-23 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.2.0

2018-01-19 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Used new FileUtility for reading files, resolves #2

2017-04-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.1.0

2017-04-01 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 8, resolves #1

2016-05-02 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.0.0, resolves #76007

2016-04-26 Francois Suter (Cobweb)  <typo3@cobweb.ch>
