@@ -1,3 +1,7 @@
+2022-12-18 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+	* Switch to new connector service registration API, resolves #11
+
 2021-10-05 Francois Suter (Idéative)  <typo3@ideative.ch>
 
 	* Relase version 3.0.0
